<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/colorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@android:style/Theme.Material.Light"
    tools:context=".LauncherActivity">

    <View
        android:id="@+id/colorView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:background="#93949f" />

    <TextView
        android:id="@+id/presetsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colorView"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Presets" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/presets"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@+id/presetsLabel"
        android:layout_marginTop="8dp"
        android:paddingRight="16dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/paletteColorsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/presets"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Wallpaper palette"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/paletteColors"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@+id/paletteColorsLabel"
        android:layout_marginTop="8dp"
        android:paddingRight="16dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:visibility="gone" />

    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paletteColors"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/color" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colorLabel"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:dsb_indicatorColor="@color/colorPrimary"
        app:dsb_progressColor="@color/colorPrimary"
        app:dsb_max="360" />

    <TextView
        android:id="@+id/saturationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hue"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/saturation" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturationLabel"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:dsb_indicatorColor="@color/colorPrimary"
        app:dsb_progressColor="@color/colorPrimary"
        app:dsb_max="1000" />

    <TextView
        android:id="@+id/valueLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturation"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/brightness" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueLabel"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:dsb_indicatorColor="@color/colorPrimary"
        app:dsb_progressColor="@color/colorPrimary"
        app:dsb_max="1000" />

    <EditText
        android:id="@+id/hexValue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/value"
        android:hint="Hex value"
        android:layout_toStartOf="@+id/submitButton"
        android:imeOptions="actionDone"
        android:background="@android:color/transparent"
        android:layout_marginLeft="8dp"
        android:singleLine="true"
        android:layout_below="@id/value"/>

    <ImageButton
        android:id="@+id/submitButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/valueLabel"
        android:layout_below="@+id/value"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:tint="@android:color/white"
        android:src="@drawable/ic_okay" />

    <Button
        android:id="@+id/switchTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="Switch to accent"
        android:visibility="gone"/>

</RelativeLayout>
