<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:background="#00BCD4"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/save"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:selectableItemBackground"
            android:id="@+id/save"
            android:layout_gravity="end"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameInput"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColorHint="@color/dark_gray"
                        android:background="@android:color/transparent"
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text=""
                        android:hint="@string/app_label_hint"
                        android:id="@+id/label" />

                </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/reset_label"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_refresh_black_24dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:tint="#00BCD4"/>
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000"
                android:alpha="0.12"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:id="@+id/defaultSelector">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="centerInside"
                    android:tint="#cfff"
                    android:tintMode="src_atop"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/circleDefault" />

                <LinearLayout
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:alpha="0.87"
                        android:text="Default icon"
                        android:id="@+id/chooseDefault" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:alpha="0.54"
                        android:text="This app's default or themed icon"
                        android:id="@+id/chooseDefaultInfo" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/checkDefault"
                    android:layout_marginEnd="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:id="@+id/originalSelector">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="centerInside"
                    android:tint="#cfff"
                    android:tintMode="src_atop"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/circleOriginal" />

                <LinearLayout
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:alpha="0.87"
                        android:text="Original icon"
                        android:id="@+id/chooseOriginal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:alpha="0.54"
                        android:text="This app's original, unthemed icon"
                        android:id="@+id/chooseOriginalInfo" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/checkOriginal"
                    android:layout_marginEnd="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:id="@+id/customSelector">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="centerInside"
                    android:tint="#cfff"
                    android:tintMode="src_atop"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/circleCustom" />

                <LinearLayout
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:alpha="0.87"
                        android:text="Custom icon"
                        android:id="@+id/chooseCustom" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:alpha="0.54"
                        android:text="An icon from another icon pack"
                        android:id="@+id/chooseCustomInfo" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/checkCustom"
                    android:layout_marginEnd="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>

            <Button
                android:scaleX="0"
                android:scaleY="0"
                android:id="@+id/btn_select_icon"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:paddingEnd="48dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#00BCD4"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:text="@string/select_icon"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
